# Social-Network-Analysis-System

./: CMakeLists.txt  README.md  main.cpp  sort.h
(mhy)data structure/Social-Network-Analysis-System/: main.cpp
(mhy)data structure/Social-Network-Analysis-System/include/data_structure/: lin_list.h  queue.h
(mhy)data structure/Social-Network-Analysis-System/include/models/: action.h  clients.h  comment.h  huffman.h  message.h
(mhy)data structure/Social-Network-Analysis-System/src/models/: action.cpp  clients.cpp  comment.cpp  huffman.cpp  message.cpp
data/: clients.json
include/: lin_list.h  stack.h  test.h
include/data_structure/: heap.h  huffman.h  lin_list.h  queue.h  search_tree.h  stack.h  tree.h
include/manager/: core.h  file_manager.h  undo_manager.h
include/models/: Post.h  action.h  clients.h  comment.h  message.h  social_graph.h  sort.h
include/ui/: mainwindow.h
include/ui/delegates/: post_item_delegate.h
include/ui/models/: clients_table_model.h  posts_table_model.h
src/data_structure/: huffman.cpp
src/gui/: AddPostDialog.cpp  AddPostDialog.h  MainWindow.cpp  MainWindow.h
src/manager/: core.cpp  file_manager.cpp  undo_manager.cpp
src/models/: Post.cpp  action.cpp  clients.cpp  comment.cpp  social_graph.cpp  sort.cpp
src/ui/: mainwindow.cpp  mainwindow.h  qt_main.cpp  resources.qrc
src/ui/delegates/: post_item_delegate.cpp  post_item_delegate.h
src/ui/models/: clients_table_model.cpp  clients_table_model.h  posts_table_model.cpp  posts_table_model.h
src/ui/styles/: dark.qss
